--- a/grandioso/css/footer.scss
+++ b/grandioso/css/footer.scss
@@ -63,7 +63,9 @@
         &:hover,
         &:active,
         &:focus {
-            background-color: $gray;
+            background-color: $violet;
+            color: $white;
+            border-color: $violet;
         }
     }
     @media (max-width: 767px) {
@@ -212,7 +214,7 @@
             &:hover,
             &:active,
             &:focus {
-                color: #FFFFFF;
+                color: $greyLight2;
             }
         }
     }
@@ -226,10 +228,11 @@
         line-height: 154%;
         color: #FFFFFF;
         display: block;
+        white-space: nowrap;
         &:hover,
         &:active,
         &:focus {
-            color: #FFFFFF;
+            color: $greyLight2;
         }
     }
     @media (max-width: 767px) {
@@ -244,6 +247,6 @@
     &:hover,
     &:active,
     &:focus {
-        color: white;
+        color: $greyLight2;
     }
 }
