--- a/grandioso/css/mainMenu.scss
+++ b/grandioso/css/mainMenu.scss
@@ -65,7 +65,6 @@
             &:active,
             &:focus {
                 color: $black;
-                text-decoration: none;
             }
             &:before {
                 content: '';
@@ -117,14 +116,13 @@
         & a {
             margin: 0;
             padding: 0;
-            color: $black;
+            // color: $black;
             text-transform: uppercase;
             font-size: 1.5vh;
             &:hover,
             &:active,
             &:focus {
-                color: $black;
-                text-decoration: none;
+                // color: $greyLight2;
             }
             @media (max-width: 767px) {
                 font-size: 2.5vh;
@@ -179,7 +177,6 @@
             &:active,
             &:focus {
                 color: $black;
-                text-decoration: none;
             }
             &:before {
                 content: '';
