--- a/VR/css/_anim.scss
+++ b/VR/css/_anim.scss
@@ -10,9 +10,87 @@
     animation: slide-right 0.5s ease-out both;
 }
 
+.fade-in {
+    animation: fade-in 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+.fade-in-top {
+    animation: fade-in-top 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+.fade-in-bottom {
+    animation: fade-in-bottom 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+.fade-in-left {
+    animation: fade-in-left 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+.height-bottom {
+    animation: height-bottom 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    position: relative;
+}
+
+@keyframes height-bottom {
+    0% {
+        height: 0;
+        opacity: 0;
+    }
+    100% {
+        height: 500px;
+        opacity: 1;
+    }
+}
+
+@keyframes fade-in-left {
+    0% {
+        transform: translateX(-50px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(initial);
+        opacity: 1;
+    }
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fade-in-top {
+    0% {
+        -webkit-transform: translateY(-50px);
+        transform: translateY(-50px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes fade-in-bottom {
+    0% {
+        -webkit-transform: translateY(150px);
+        transform: translateY(150px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
 @keyframes slide-right {
     0% {
-        transform: translateX(-100%);
+        transform: translateX(-120%);
     }
     100% {
         transform: translateX(0);
