--- a/VR/css/_anim.scss
+++ b/VR/css/_anim.scss
@@ -10,6 +10,10 @@
     animation: slide-right 0.5s ease-out both;
 }
 
+.slide-left {
+    animation: slide-left 0.5s ease-out both;
+}
+
 .fade-in {
     animation: fade-in 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
@@ -94,6 +98,17 @@
     }
     100% {
         transform: translateX(0);
+    }
+}
+
+@keyframes slide-left {
+    0% {
+        transform: translateX(120%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
     }
 }
 
