--- a/VR/css/style.css
+++ b/VR/css/style.css
@@ -5324,6 +5324,11 @@ a.text-dark:hover, a.text-dark:focus {
           animation: slide-right 0.5s ease-out both;
 }
 
+.slide-left {
+  -webkit-animation: slide-left 0.5s ease-out both;
+          animation: slide-left 0.5s ease-out both;
+}
+
 .fade-in {
   -webkit-animation: fade-in 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
           animation: fade-in 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
@@ -5487,6 +5492,32 @@ a.text-dark:hover, a.text-dark:focus {
   100% {
     -webkit-transform: translateX(0);
             transform: translateX(0);
+  }
+}
+
+@-webkit-keyframes slide-left {
+  0% {
+    -webkit-transform: translateX(120%);
+            transform: translateX(120%);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-left {
+  0% {
+    -webkit-transform: translateX(120%);
+            transform: translateX(120%);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
   }
 }
 
@@ -5883,6 +5914,14 @@ input::-webkit-inner-spin-button {
   margin-bottom: 100px;
 }
 
+.marginBottom_small {
+  margin-bottom: 20px;
+}
+
+.marginBottom_normal {
+  margin-bottom: 40px;
+}
+
 .marginBottom_big {
   margin-bottom: 160px;
 }
@@ -5970,6 +6009,7 @@ input::-webkit-inner-spin-button {
       -ms-flex-align: center;
           align-items: center;
   height: 110px;
+  width: 100%;
 }
 
 .header__logo {
@@ -6004,6 +6044,30 @@ input::-webkit-inner-spin-button {
 
 .basket_header {
   margin: 0 81px;
+}
+
+.breadcrumb {
+  color: #BDBDBD;
+  margin-bottom: 20px;
+  font-family: Geometria;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 140%;
+}
+
+.breadcrumb * {
+  color: #BDBDBD;
+  font-family: Geometria;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 140%;
+}
+
+.breadcrumb *:hover {
+  color: #BDBDBD;
+  text-decoration: none;
 }
 
 .first {
@@ -6514,6 +6578,10 @@ input::-webkit-inner-spin-button {
           flex-direction: column;
 }
 
+.quote__autor_white {
+  color: #828282;
+}
+
 @media (max-width: 991.98px) {
   .quote__img {
     width: 66px;
@@ -6697,6 +6765,11 @@ input::-webkit-inner-spin-button {
   font-size: 16px;
   line-height: 140%;
   color: #F2F2F2;
+}
+
+.mainPageForm_w100 {
+  background-color: #303338;
+  margin: 100px 0;
 }
 
 @media (max-width: 991.98px) {
@@ -7414,5 +7487,268 @@ input::-webkit-inner-spin-button {
 
 .formBottom__btn {
   margin-bottom: 40px;
+}
+
+.pageCoursFirst {
+  background: linear-gradient(to top, transparent 200px, #303338 200px);
+}
+
+.pageCoursFirst__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 200px;
+}
+
+.pageCoursFirst__socialItem {
+  margin-bottom: 20px;
+}
+
+.pageCoursFirst__socialItem svg {
+  width: 30px;
+  height: auto;
+  fill: #828282;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.pageCoursFirst__socialItem:hover svg {
+  fill: #F2F2F2;
+}
+
+.pageCoursFirst__img {
+  width: 100%;
+  height: auto;
+}
+
+@media (max-width: 1199.98px) {
+  .pageCoursFirst {
+    background: linear-gradient(to top, transparent 120px, #303338 120px);
+  }
+  .pageCoursFirst__social {
+    margin-bottom: 120px;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .pageCoursFirst__img {
+    width: 100%;
+    height: auto;
+    min-height: 400px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: center;
+       object-position: center;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .pageCoursFirst {
+    background: linear-gradient(to top, transparent 60px, #303338 60px);
+  }
+  .pageCoursFirst__img {
+    min-height: 200px;
+  }
+  .pageCoursFirst__social {
+    margin-bottom: 60px;
+  }
+}
+
+.pageCoursContents__item {
+  position: relative;
+  list-style-type: none;
+  margin-bottom: 20px;
+}
+
+.pageCoursContents__item span {
+  position: absolute;
+  top: 0;
+  left: -40px;
+  color: #D39434;
+}
+
+.pageCoursContents__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.pageCoursContents__list_white p {
+  color: #F2F2F2;
+}
+
+.pageCoursContents__img1 {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.pageCoursContents__img2 {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.pageCoursContents__bottom {
+  background-color: #303338;
+}
+
+.pageCoursContents__col {
+  z-index: 1;
+  -webkit-transform: translateX(8.33vw);
+          transform: translateX(8.33vw);
+}
+
+@media (max-width: 991.98px) {
+  .pageCoursContents__col {
+    -webkit-transform: translateX(16.66vw);
+            transform: translateX(16.66vw);
+  }
+}
+
+@media (max-width: 767.98px) {
+  .pageCoursContents__col {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  .pageCoursContents__item span {
+    left: -30px;
+  }
+}
+
+.pageCoursInCours {
+  margin-top: -100px;
+}
+
+.pageCoursInCours__item {
+  z-index: 5;
+  position: relative;
+  margin-top: -60px;
+}
+
+.pageCoursInCours__item img {
+  -webkit-transform: translateY(40%);
+          transform: translateY(40%);
+  -webkit-transition: 0.4s ease-in-out;
+  transition: 0.4s ease-in-out;
+}
+
+.pageCoursInCours__item img:hover {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+@media (max-width: 991.98px) {
+  .pageCoursInCours__item {
+    margin-top: 0px;
+  }
+  .pageCoursInCours__item img {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@media (max-width: 767.98px) {
+  .pageCoursInCours {
+    margin-top: 20px;
+  }
+}
+
+.pageCoursNecessary__grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 25vh 25vh;
+      grid-template-rows: 25vh 25vh;
+  /* 3 строки */
+  -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  /* 3 столбца */
+      grid-template-areas: "p1 p1 p2 p2 p6 p6 p6 p6 p5 p5" "p3 p3 p3 p3 p3 p4 p4 p4 p5 p5";
+}
+
+.pageCoursNecessary__cart {
+  position: relative;
+  overflow: hidden;
+}
+
+.pageCoursNecessary__cart img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.pageCoursNecessary__cart h4 {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  max-width: 90%;
+  padding: 10px 20px 10px 30px;
+  color: #303338;
+  background-color: #F2F2F2;
+}
+
+.pageCoursNecessary__cart:hover img {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.pageCoursNecessary__detail {
+  padding: 50px 70px;
+  background-color: #303338;
+  color: #F2F2F2;
+}
+
+@media (max-width: 1199.98px) {
+  .pageCoursNecessary__grid {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: 25vh 25vh 25vh;
+        grid-template-rows: 25vh 25vh 25vh;
+    /* 3 строки */
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    /* 3 столбца */
+        grid-template-areas: "p1 p2" "p3 p6" "p4 p5";
+  }
+}
+
+@media (max-width: 991.98px) {
+  .pageCoursNecessary__grid {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: 25vh 25vh 25vh 25vh 25vh 25vh;
+        grid-template-rows: 25vh 25vh 25vh 25vh 25vh 25vh;
+    /* 3 строки */
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    /* 3 столбца */
+        grid-template-areas: "p1" "p2" "p6" "p3" "p4" "p5";
+  }
 }
 /*# sourceMappingURL=style.css.map */
