--- a/VR/css/_cours.scss
+++ b/VR/css/_cours.scss
@@ -1,5 +1,6 @@
-.pageCoursFirst {
+.pageFirst {
     background: linear-gradient(to top, transparent 200px, #303338 200px);
+    padding-top: 150px;
     &__social {
         display: flex;
         flex-direction: column;
