--- a/VR/css/_mainPage.scss
+++ b/VR/css/_mainPage.scss
@@ -8,7 +8,7 @@
     background-size: cover;
     background-position: center top;
     &__textWrap {
-        margin-bottom: 20vh;
+        // margin-bottom: 20vh;
     }
     &__titleImg {
         width: 100%;
@@ -39,7 +39,7 @@
     display: block;
     margin-left: auto;
     width: max-content;
-    margin-bottom: 30vh;
+    margin-bottom: 10vh;
     & ul {
         display: flex;
         flex-direction: column;
@@ -123,8 +123,9 @@
         top: 0;
         left: -1px;
         width: 3px;
-        height: 15%;
+        height: 14.3%;
         background-color: $gold;
+        transition: 0.5s ease-in-out;
     }
     &__social {
         display: flex;
@@ -168,6 +169,7 @@
         margin: 0;
         padding: 0;
         z-index: 1;
+        user-select: none;
     }
     &__text {
         line-height: 120%;
@@ -635,7 +637,7 @@
     display: flex;
     justify-content: flex-end;
     position: absolute;
-    top: -94px;
+    top: -88px;
     right: 0;
     @include media-breakpoint-down(md) {
         display: none;
